[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://enemies/close_fast.gd" type="Script" id=2]
[ext_resource path="res://sprites/debug_circle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 137.131

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.2953, 16.2921 )

[sub_resource type="CircleShape2D" id=3]
radius = 31.158

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="TargetZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetZone"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.172549 )
scale = Vector2( 0.143164, 0.143164 )
texture = ExtResource( 3 )

[node name="tooClose" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tooClose"]
shape = SubResource( 3 )
[connection signal="body_entered" from="TargetZone" to="." method="_on_TargetZone_body_entered"]
[connection signal="body_exited" from="TargetZone" to="." method="_on_TargetZone_body_exited"]
[connection signal="body_entered" from="tooClose" to="." method="_on_tooClose_body_entered"]
[connection signal="body_exited" from="tooClose" to="." method="_on_tooClose_body_exited"]
